[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/popup/WaitingOpponent.gd" type="Script" id=1]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/MainMenu/home.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.231373 ), Color( 1, 1, 1, 1 ) ]
}

[node name="WaitingOpponent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -35.5
margin_right = 135.0
margin_bottom = -3.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.792157, 0.113725, 1 )
text = "WAITING FOR OPPONENT"
align = 1
autowrap = true

[node name="btnCancel" type="Button" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "TAP TO CANCEL"
flat = true

[node name="lblNotFoundMsg" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 100.0
margin_bottom = 26.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.713726, 0.666667, 0.666667, 1 )
text = "Press home button
 to connection close,
Move to home scareen."
align = 1

[node name="btnHome" type="Button" parent="CanvasLayer/lblNotFoundMsg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.6652
margin_top = 55.327
margin_right = 185.335
margin_bottom = 139.327
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Title_animate = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/btnCancel" to="." method="_on_btnCancel_pressed"]
[connection signal="pressed" from="CanvasLayer/lblNotFoundMsg/btnHome" to="." method="_on_btnHome_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
